initial thread scraping done; moving onto job logic

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a webscrapper and all around good guy for mafia phpbb forms",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node-dev --respawn --transpileOnly src/index.ts",
     "validate": "tslint --project tsconfig.json",
     "prod": "npm run validate && tsc"
@@ -21,18 +21,38 @@
     "cheerio": "^1.0.0-rc.3",
     "couchbase": "^3.0.1",
     "cron": "^1.8.2",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.18",
     "@types/couchbase": "^2.4.1",
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.1",
     "@types/node": "^13.13.4",
+    "ts-jest": "^25.4.0",
+    "jest": "^25.5.4",
     "ts-node": "^8.9.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^5.1.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>/src",
+      "<rootDir>"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.+(ts|tsx|js)",
+      "**/**/__tests__/**/*.+(ts|tsx|js)",
+      "**/?(*.)+(spec|test).+(ts|tsx|js)"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "silent": false
   }
 }
