finished up core command set

--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ FORUM_URL='https://www.blankmediagames.com/phpbb'
 GAMES_ID=17
 POSTS_PER_PAGE=25
 DEFAULT_VOTECOUNT_TIMEOUT=
-START_COMMAND=
+START_COMMAND="!joybot"
+USER="joybot"
+PASSWORD="lame man"
