--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.18",
@@ -31,9 +32,10 @@
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.150",
     "@types/node": "^13.13.4",
-    "ts-jest": "^25.4.0",
     "jest": "^25.5.4",
+    "ts-jest": "^25.4.0",
     "ts-node": "^8.9.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^5.1.0",
@@ -48,6 +50,7 @@
     "testMatch": [
       "**/__tests__/**/*.+(ts|tsx|js)",
       "**/**/__tests__/**/*.+(ts|tsx|js)",
+      "**/**/**/__tests__/**/*.+(ts|tsx|js)",
       "**/?(*.)+(spec|test).+(ts|tsx|js)"
     ],
     "transform": {
