--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "romanjs": "^2.0.1"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.18",
