post parsing and crawling all done

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
       "*": ["node_modules/*"]
     }
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/jobs/parsers/__tests__"]
 }
