--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "lodash": "^4.17.15",
-    "romanjs": "^2.0.1"
+    "romanjs": "^2.0.1",
+    "string-similarity": "^4.0.1"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.18",
@@ -35,6 +36,7 @@
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
     "@types/node": "^13.13.4",
+    "@types/string-similarity": "^3.0.0",
     "jest": "^25.5.4",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.9.1",
