--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "roots": [
       "<rootDir>/src",
       "<rootDir>/src/jobs",
-      "<rootDir>/src/jobs/commands"
+      "<rootDir>/src/jobs/commands",
+      "<rootDir>/src/utils"
     ],
     "preset": "ts-jest",
     "testEnvironment": "node",
