testing out gitignore stuff

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ GAMES_ID=17
 POSTS_PER_PAGE=25
 DEFAULT_VOTECOUNT_TIMEOUT=60
 START_COMMAND="!joybot"
-USER="joybot"
+USER="tes"
 PASSWORD="lame man"
