mvp with local db

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "ts-node-dev --respawn --transpileOnly src/index.ts",
+    "dev": "ts-node --files src/index.ts",
     "validate": "tslint --project tsconfig.json",
     "prod": "npm run validate && tsc",
-    "sanity": "ts-node --files  --files src/phpbb-api/__tests__/manager.manual.ts"
+    "sanity": "ts-node --files src/phpbb-api/__tests__/manager.manual.ts"
   },
   "repository": {
     "type": "git",
