--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "ts-node --files src/index.ts",
     "validate": "tslint --project tsconfig.json",
-    "prod": "npm run validate && tsc",
+    "prod": "tsc && node dist/index.js",
     "sanity": "ts-node --files src/phpbb-api/__tests__/manager.manual.ts"
   },
   "repository": {
@@ -21,7 +21,6 @@
     "axios": "^0.19.2",
     "axios-cookiejar-support": "^1.0.0",
     "cheerio": "^1.0.0-rc.3",
-    "couchbase": "^3.0.1",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -34,7 +33,6 @@
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.18",
-    "@types/couchbase": "^2.4.1",
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
