--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios-cookiejar-support": "^1.0.0",
     "cheerio": "^1.0.0-rc.3",
     "cron": "^1.8.2",
+    "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "form-data": "^3.0.0",
@@ -30,7 +31,8 @@
     "lodash": "^4.17.15",
     "romanjs": "^2.0.1",
     "string-similarity": "^4.0.1",
-    "tough-cookie": "^4.0.0"
+    "tough-cookie": "^4.0.0",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.18",
@@ -41,6 +43,7 @@
     "@types/node": "^13.13.4",
     "@types/string-similarity": "^3.0.0",
     "@types/tough-cookie": "^4.0.0",
+    "@types/uuid": "^8.0.0",
     "jest": "^25.5.4",
     "nodemon": "^2.0.3",
     "ts-jest": "^25.4.0",
